<resources>
    <string name="app_name">KlosetKaper</string>
    <string name="find_outfit">Find Outfit</string>
    <string name="add_item">Add Item</string>
    <string name="view_closet">View Closet</string>
    <string name="build_outfit">Build Outfit</string>
    <string name="hamper">Hamper</string>
    <string name="settings">Settings</string>
    <string-array name="greetings">
        <item>Hey</item>
        <item>Hello</item>
        <item>Sup</item>
        <item>Yello</item>
    </string-array>
    <string-array name="encouragement">
        <item>Rock It!</item>
        <item>Looking Good</item>
        <item>Own It</item>
        <item>Ooh killem\'</item>
    </string-array>
    <string name="title_activity_add_item">AddItem</string>
    <string name="title_activity_view_closet">ViewCloset</string>
    <string name="title_activity_build_outfit">BuildOutfit</string>
    <string name="title_activity_find_outfit">FindOutfit</string>
    <string name="title_activity_hamper">Hamper</string>
    <string name="title_activity_settings">Settings</string>
    <string name="category">Category</string>
    <string name="color">Color</string>
    <string name="date_purchased">Date Purchased</string>
    <string name="purchase_location">Purchase Location</string>
    <string name="secondary_color">Secondary Color</string>
    <string name="online">Online</string>
    <string name="store">Store</string>
    <string name="cost">Cost</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="rating">Rating</string>
    <string name="add">Add</string>
    <string name="accessories">Accessories</string>
    <string name="bottom">Bottom</string>
    <string name="fullimage">Full Image</string>
    <string name="shoes">Shoes</string>
    <string name="one_piece">One Piece</string>
    <string name="top">Top</string>
    <string name="full_image_of_the_outfit">Full Image of the Outfit</string>
    <string name="more_info">More Info</string>
    <string name="random">Random</string>
    <string name="wear_it">Wear It</string>
    <string-array name="categories">
        <item>Accessories</item>
        <item>Blouse</item>
        <item>Coats</item>
        <item>Dress</item>
        <item>Jacket</item>
        <item>Jeans</item>
        <item>Long sleeved shirt</item>
        <item>Nightwear</item>
        <item>Scarf</item>
        <item>Shirt</item>
        <item>Shorts</item>
        <item>Shoes</item>
        <item>Suits</item>
        <item>Swimwear</item>
        <item>T-shirt</item>
    </string-array>
    <string-array name="primary_colors">
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Silver</item>
        <item>Yellow</item>
        <item>White</item>
    </string-array>
    <string-array name="secondary_colors">
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Silver</item>
        <item>Yellow</item>//COPY FROM PRIMARY TO SECONDARY COLORS
        <item>White</item>
    </string-array>
    <string-array name="occasions">
    <item>Casual</item>
    <item>Formal</item>
    <item>Semi-Formal</item>
</string-array>
    <string name="title_activity_more_info">MoreInfo</string>
    <string name="title_activity_wear_it">WearIt</string>
    <string name="clean">Clean</string>
    <string name="home">Home</string>
    <string name="find">Find</string>
    <string name="title_activity_outfit_search">OutfitSearch</string>
    <string name="abc">ABC</string>
    <string name="cleanliness">Cleanliness</string>
    <string name="clean_frequency">Clean Frequency</string>
    <string name="weeks">Weeks</string>
    <string name="wears">Wears</string>
    <string name="save_images_separately">Save Images Separately</string>
    <string name="link_to_gallery">Link to Gallery</string>
    <string name="title_activity_view_item">ViewItem</string>
    <string name="save">Save</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="select">Select</string>
    <string name="occasion">Occasion</string>
    <string name="outfit_image">Outfit Image</string>
    <string name="reminders_q">Reminders</string>
    <string name="togglebutton">ToggleButton</string>
</resources>
