<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.ebonycalloway.klosetkaper.Settings">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:ems="10"
        android:id="@+id/nameText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/clean_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:id="@+id/textView16" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/weeksCleanNumber"
        android:layout_alignBaseline="@+id/textView17"
        android:layout_alignBottom="@+id/textView17"
        android:layout_alignLeft="@+id/wearsCleanNumber"
        android:layout_alignStart="@+id/wearsCleanNumber" />

    <EditText
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/weeksCleanNumber"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="14dp"
        android:id="@+id/wearsCleanNumber" />

    <TextView
        android:text="@string/weeks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView16"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="65dp"
        android:layout_marginEnd="65dp"
        android:id="@+id/textView17" />

    <TextView
        android:text="@string/wears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/textView18"
        android:layout_alignBaseline="@+id/wearsCleanNumber"
        android:layout_alignBottom="@+id/wearsCleanNumber"
        android:layout_alignLeft="@+id/textView17"
        android:layout_alignStart="@+id/textView17" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/wearsCleanNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/separateSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/save_images_separately" />

        <RadioButton
            android:id="@+id/linkSaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/link_to_gallery" />
    </RadioGroup>
    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:text="@string/togglebutton"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignLeft="@+id/weeksCleanNumber"
        android:layout_alignStart="@+id/weeksCleanNumber" />
    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:id="@+id/saveSettingsButton"
        android:onClick="saveSettings" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminders_q"
        android:layout_alignBaseline="@+id/toggleButton"
        android:layout_alignBottom="@+id/toggleButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
