<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.ebonycalloway.klosetkaper.View.BuildOutfit">

    <Spinner
        android:layout_height="wrap_content"
        android:id="@+id/topSpinner"
        android:layout_width="250dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/topSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView10"
        android:layout_alignRight="@+id/textView11"
        android:layout_alignEnd="@+id/textView11" />

    <TextView
        android:text="@string/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textView11" />

    <Spinner
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/bottomSpinner"
        android:layout_alignTop="@+id/textView11"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/one_piece"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bottomSpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:id="@+id/textView12" />

    <Spinner
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/onePieceSpinner"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/shoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/accessories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:id="@+id/textView14" />

    <TextView
        android:text="@string/fullimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView14"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:id="@+id/textView15" />

    <Spinner
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/shoesSpinner"
        android:layout_alignTop="@+id/textView13"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/accessoriesSpinner"
        android:layout_alignTop="@+id/textView14"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/fulloutfit"
        android:id="@+id/imageView2"
        android:contentDescription="@string/full_image_of_the_outfit"
        android:layout_alignTop="@+id/textView15"
        android:layout_toRightOf="@+id/textView14"
        android:layout_toEndOf="@+id/textView14"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp" />

    <Button
        android:text="@string/random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp"
        android:id="@+id/randomButton"
        android:onClick="randomOutfit" />

    <Button
        android:text="@string/wear_it"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/MoreInfoButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/wearItButton"
        android:onClick="wearIt" />

    <Button
        android:text="@string/more_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MoreInfoButton"
        android:layout_alignBaseline="@+id/randomButton"
        android:layout_alignBottom="@+id/randomButton"
        android:layout_centerHorizontal="true"
        android:onClick="moreInfo" />
</RelativeLayout>
