<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.ebonycalloway.klosetkaper.View.AddItem">

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="230dp"
        android:layout_height="37dp"
        android:entries="@array/categories"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_above="@+id/outfitImageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_above="@+id/color2Spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/color1Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/primary_colors"
        android:layout_below="@+id/descriptionEditText"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/addItemButton"
        android:layout_toEndOf="@+id/addItemButton" />

    <TextView
        android:text="@string/secondary_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/color2Spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/color2Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/color1Spinner"
        android:layout_alignStart="@+id/color1Spinner"
        android:layout_below="@+id/color1Spinner"
        android:entries="@array/secondary_colors" />

    <TextView
        android:text="@string/date_purchased"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/color2Spinner"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp"
        android:layout_alignLeft="@+id/color2Spinner"
        android:layout_alignStart="@+id/color2Spinner" />

    <TextView
        android:text="@string/purchase_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_above="@+id/categorySpinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="29dp" />

    <RadioGroup
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_below="@+id/calendarView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:id="@+id/storeRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/store" />

        <RadioButton
            android:id="@+id/onlineRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online" />
    </RadioGroup>
    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_alignBaseline="@+id/nameEditText"
        android:layout_alignBottom="@+id/nameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/nameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_below="@+id/nameEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/costEditText"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_above="@+id/textView8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/addItemButton"
        android:onClick="addItemAndGoHome" />

    <Button
        android:text="@string/take_a_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/outfitPictureButton"
        android:onClick="takePicture"
        android:layout_alignBottom="@+id/outfitImageView"
        android:layout_alignLeft="@+id/ratingBar"
        android:layout_alignStart="@+id/ratingBar" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:numStars="1"
        android:stepSize=".5"
        android:layout_above="@+id/addItemButton"
        android:layout_alignRight="@+id/addItemButton"
        android:layout_alignEnd="@+id/addItemButton" />

    <TextView
        android:text="@string/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:layout_alignBottom="@+id/ratingBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_above="@+id/ratingBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/outfitImageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/outfit_image"
        app:srcCompat="@drawable/fulloutfit"
        android:layout_above="@+id/costEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="21dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occasion"
        android:layout_above="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/occasionSpinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:entries="@array/occasions"
        android:layout_above="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/color1Spinner"
        android:layout_alignStart="@+id/color1Spinner" />

</RelativeLayout>
