<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ebonycalloway.klosetkaper.View.MainActivity">

    <Button
        android:text="@string/view_closet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/findOutfitButton"
        android:layout_alignLeft="@+id/findOutfitButton"
        android:layout_alignStart="@+id/findOutfitButton"
        android:layout_marginTop="27dp"
        android:id="@+id/viewClosetButton"
        android:onClick="viewCloset" />

    <Button
        android:text="@string/hamper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewClosetButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:id="@+id/hamperButton"
        android:onClick="hamper" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/maincloset"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/settingsButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="settings" />

    <Button
        android:text="@string/add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp"
        android:id="@+id/addItemButton"
        android:onClick="addItem"
        android:layout_below="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp" />

    <Button
        android:text="@string/build_outfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buildOutfitButton"
        android:onClick="buildOutfit"
        android:layout_below="@+id/addItemButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp" />

    <Button
        android:text="@string/find_outfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/findOutfitButton"
        android:onClick="findOutfit"
        android:layout_alignBaseline="@+id/addItemButton"
        android:layout_alignBottom="@+id/addItemButton"
        android:layout_toLeftOf="@+id/hamperButton"
        android:layout_toStartOf="@+id/hamperButton"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />
</RelativeLayout>
