<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_view_closet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ebonycalloway.klosetkaper.View.ViewCloset"
    tools:showIn="@layout/activity_view_closet">

    <RadioButton
        android:text="@string/abc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/abcradioButton"
        android:checked="true" />

    <RadioButton
        android:text="@string/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/categoryradioButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RadioButton
        android:text="@string/cleanliness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cleanradioButton"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/abcradioButton"
        android:layout_toEndOf="@+id/abcradioButton"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/abcradioButton"
        android:layout_marginTop="18dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/closetListView" />
</RelativeLayout>
